HVAC Backup 2/objects/Local_Purchase_Line_Items__c(1).object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Eligible_for_Credit_Note__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eligible for Credit Note</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Eligible_for_P2P__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eligible for P2P</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Local_Purchase__c</fullName>
        <label>Local Purchase</label>
        <referenceTo>Local_Purchase__c</referenceTo>
        <relationshipLabel>Local Purchase Line Item</relationshipLabel>
        <relationshipName>Local_Purchase_Line_Item</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Modal_Id__c</fullName>
        <label>Part Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <formula>Unit_Price__c  *  Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Local Purchase Line Item</relationshipLabel>
        <relationshipName>Local_Purchase_Line_Item</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Local Purchase Line Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LPLI-{0000}</displayFormat>
        <label>Local Purchase Line Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Local Purchase Line Item</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Credit_Note_Eligibility_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>Text(Local_Purchase__r.Approval_Status__c) != &apos;Approved&apos;
                    &amp;&amp; 
ISCHANGED(Eligible_for_Credit_Note__c) 
                    &amp;&amp; 
Eligible_for_Credit_Note__c == True</errorConditionFormula>
        <errorDisplayField>Eligible_for_Credit_Note__c</errorDisplayField>
        <errorMessage>Local Purchase is not approved.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Credit_Note_Eligibility_not_editable</fullName>
        <active>true</active>
        <errorConditionFormula>Eligible_for_Credit_Note__c == False
                 &amp;&amp;
 PRIORVALUE(Eligible_for_Credit_Note__c) == True</errorConditionFormula>
        <errorDisplayField>Eligible_for_Credit_Note__c</errorDisplayField>
        <errorMessage>This field is not editable.</errorMessage>
    </validationRules>
</CustomObject>